TreeGraphs: common ancestor